[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprite_outline.gd" type="Script" id=1]
[ext_resource path="res://button_not_selected.tres" type="StyleBox" id=2]
[ext_resource path="res://button_selected.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.25098 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="SpriteOutline" type="Button" groups=["sprite_outline"]]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1, 1 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
script = ExtResource( 1 )

[node name="Top" type="Button" parent="."]
margin_left = -1.0
margin_top = -2.0
margin_right = 41.0
margin_bottom = 3.0
rect_min_size = Vector2( 5, 5 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="Bottom" type="Button" parent="."]
margin_left = -1.0
margin_top = 37.0
margin_right = 41.0
margin_bottom = 42.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="Left" type="Button" parent="."]
margin_left = -2.0
margin_top = -1.0
margin_right = 3.0
margin_bottom = 41.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="Right" type="Button" parent="."]
margin_left = 37.0
margin_top = -1.0
margin_right = 42.0
margin_bottom = 41.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="TopLeft" type="Button" parent="."]
margin_left = -2.0
margin_top = -2.0
margin_right = 3.0
margin_bottom = 3.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="TopRight" type="Button" parent="."]
margin_left = 37.0
margin_top = -2.0
margin_right = 42.0
margin_bottom = 3.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="BottomLeft" type="Button" parent="."]
margin_left = -2.0
margin_top = 37.0
margin_right = 3.0
margin_bottom = 42.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[node name="BottomRight" type="Button" parent="."]
margin_left = 37.0
margin_top = 37.0
margin_right = 42.0
margin_bottom = 42.0
rect_min_size = Vector2( 5, 5 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
disabled = true
keep_pressed_outside = true

[connection signal="button_down" from="." to="." method="_on_SpriteOutline_button_down"]
[connection signal="button_up" from="." to="." method="_on_SpriteOutline_button_up"]
[connection signal="gui_input" from="." to="." method="_on_SpriteOutline_gui_input"]
[connection signal="pressed" from="." to="." method="_on_SpriteOutline_pressed"]
